@@ -2377,6 +2377,7 @@ Phillip LaBanca <labancap at ociweb dot com>
 <pkow88776 at onet dot pl>
 Journeyer J. Joh <oosaprogrammer at gmail dot com>
 Rudy Pot <rpot at aweta dot nl>
+Neil Youngman <ny at youngman dot org dot uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
